# solana-vehicle-rental

./: Anchor.toml  README.md  package.json
programs/temp-project/: Cargo.toml
programs/temp-project/src/: constants.rs  error.rs  lib.rs  state.rs
programs/temp-project/src/instructions/: add_car_account.rs  end_rent.rs  initialize.rs  mod.rs  read_price.rs  register_user_account.rs  rent_car.rs  update_balance.rs
programs/vehicle-rental/: Cargo.toml
programs/vehicle-rental/src/: constants.rs  lib.rs  state.rs
programs/vehicle-rental/src/instructions/: add_car_account.rs  end_rent.rs  mod.rs  register_user_account.rs  rent_car.rs
tests/: add_car.ts  deposit.ts  end_rent.ts  initialize.ts  register_user.ts  rent_car.ts  withdraw.ts
