[package]
name = "vehicle-rental"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "vehicle_rental"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang =  { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl =  { version = "0.30.1", features = ["metadata"]}
mpl-token-metadata = "4.1.2"
pyth-solana-receiver-sdk = { git = "https://github.com/pyth-network/pyth-crosschain", tag = "pyth-solana-receiver-sdk-v0.2.0" }
solana-program = "1.18.10"
